--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,18 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/backgroundImage"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/login_img"
-        android:alpha="0.2"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -104,6 +92,19 @@
                 android:textColor="#000000"
                 tools:ignore="HardcodedText" />
 
+            <TextView
+                android:id="@+id/tvGoToRegister"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="¿No estás registrado? Regístrate aquí"
+                android:textSize="18sp"
+                android:fontFamily="@font/titulos"
+                android:textColor="@color/blueButton"
+                android:layout_marginTop="20dp"
+                android:clickable="true"
+                android:focusable="true"
+                tools:ignore="HardcodedText" />
+
             <Button
                 android:id="@+id/btnLogin"
                 android:layout_width="320dp"
@@ -126,9 +127,12 @@
                 android:layout_marginTop="5dp"
                 tools:ignore="HardcodedText" />
 
+
+
         </LinearLayout>
     </ScrollView>
 </FrameLayout>
+
 
 
 
