--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -12,10 +12,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <!-- Recuadro verde para agregar imagen - CENTRADO CORREGIDO -->
-
-        <!-- Botones amarillos -->
-
         <FrameLayout
             android:id="@+id/btnAddImage"
             android:layout_width="match_parent"
@@ -38,6 +34,38 @@
 
         </FrameLayout>
 
+        <RelativeLayout
+            android:id="@+id/btnEditarPerfil"
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:background="@drawable/rounded_button_yellow"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="35dp"
+            android:layout_marginRight="35dp"
+            android:clipToOutline="true">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/titulos"
+                android:text="Editar Perfil"
+                android:textSize="24sp"
+                android:textColor="@android:color/black"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="24dp"
+                android:layout_toStartOf="@+id/iconLocation"
+                android:layout_marginEnd="16dp" />
+
+
+            <ImageView
+                android:id="@+id/ic_editar_perfil"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:src="@drawable/editar_perfil"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="24dp"
+                android:layout_centerVertical="true"/>
+        </RelativeLayout>
         <RelativeLayout
             android:id="@+id/btnRealTimeLocation"
             android:layout_width="match_parent"
