--- a/app/src/main/res/layout/activity_register_paso1.xml
+++ b/app/src/main/res/layout/activity_register_paso1.xml
@@ -5,14 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/backgroundImage"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/register"
-        android:alpha="0.2" />
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -137,6 +129,19 @@
             android:layout_marginBottom="16dp"
             android:textColor="#000000"
             tools:ignore="HardcodedText" />
+
+            <TextView
+                android:id="@+id/tvGoToLogin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="¿Ya tienes una cuenta? Inicia sesión"
+                android:textSize="18sp"
+                android:fontFamily="@font/titulos"
+                android:textColor="@color/blueButton"
+                android:layout_marginTop="20dp"
+                android:clickable="true"
+                android:focusable="true"
+                tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/btnSiguiente"
